modules/webgl/tests/034.vs.exp
"034.vs":3: P0001: CPP syntax error: 
#include "include.vs"
attribute vec4 vPosition;
void main()
